SLI-861 Refactor the streaming of issues to benefit security hotspots